--- a/api-serverless/.env
+++ b/api-serverless/.env
@@ -3,9 +3,9 @@
 PORT=3000
 
 # Credenciais AWS
-AWS_ACCESS_KEY_ID=123
-AWS_SECRET_ACCESS_KEY=321
-AWS_SESSION_TOKEN=333
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_SESSION_TOKEN=
 AWS_REGION=us-east-1
 
 # DynamoDB
